[package]
name = "astromonitor"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minreq = { version = "2.6", features = ["https"] }
sysinfo = "0.27"
structopt = { version = "0.3", default-features = false }
dirs = "4.0"
chrono = "0.4"
tar = "0.4"
log = "0.4"
env_logger = "0.10"
ratatui = "0.26"
crossterm = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
