[package]
name = "astromonitor"
version = "2.0.0"
edition = "2024"

[dependencies]
minreq = { version = "2.14", features = ["https"] }
sysinfo = "0.38"
dirs = "6.0"
chrono = "0.4"
tar = "0.4"
log = "0.4"
env_logger = "0.11"
ratatui = "0.30"
crossterm = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
